CRM_Connections/salesforce/force-app/main/default/objects/Audit_Log__c/fields/Approval_Decision__c.field-meta.xml
<CustomField>
    <fullName>Approval_Decision__c</fullName>
    <label>Approval Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>approved</fullName>
            </value>
            <value>
                <fullName>rejected</fullName>
            </value>
            <value>
                <fullName>unresolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>