CRM_Connections/salesforce/force-app/main/default/objects/Audit_Log__c/fields/Approval_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Approval_Timestamp__c</fullName>
    <label>Approval Timestamp</label>
    <type>DateTime</type>
</CustomField>