CRM_Connections/salesforce/force-app/main/default/objects/Audit_Log__c/fields/Approval_User__c.field-meta.xml
<CustomField>
    <fullName>Approval_User__c</fullName>
    <label>Approval User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Approved_Audit_Logs</relationshipName>
    <relationshipLabel>Approved Audit Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>