CRM_Connections/salesforce/force-app/main/default/objects/Audit_Log__c/fields/Endpoint_Mode__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Mode__c</fullName>
    <label>Endpoint Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>production</fullName>
            </value>
            <value>
                <fullName>sandbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>