CRM_Connections/salesforce/force-app/main/default/objects/Audit_Log__c/fields/Mcp_Method__c.field-meta.xml
<CustomField>
    <fullName>Mcp_Method__c</fullName>
    <label>MCP Method</label>
    <type>Text</type>
    <length>120</length>
</CustomField>