CRM_Connections/salesforce/force-app/main/default/objects/Audit_Log__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <label>Object API Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>