CRM_Connections/salesforce/force-app/main/default/objects/Audit_Log__c/fields/Operation_Id__c.field-meta.xml
<CustomField>
    <fullName>Operation_Id__c</fullName>
    <label>Operation Id</label>
    <type>Text</type>
    <length>64</length>
</CustomField>