CRM_Connections/salesforce/force-app/main/default/objects/Audit_Log__c/fields/Request_Params_Redacted__c.field-meta.xml
<CustomField>
    <fullName>Request_Params_Redacted__c</fullName>
    <label>Request Params (Redacted)</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>