CRM_Connections/salesforce/force-app/main/default/objects/Audit_Log__c/fields/Request_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Request_Timestamp__c</fullName>
    <label>Request Timestamp</label>
    <type>DateTime</type>
</CustomField>