CRM_Connections/salesforce/force-app/main/default/objects/Audit_Log__c/fields/Response_Body_Redacted__c.field-meta.xml
<CustomField>
    <fullName>Response_Body_Redacted__c</fullName>
    <label>Response Body (Redacted)</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>