CRM_Connections/salesforce/force-app/main/default/objects/Audit_Log__c/fields/Response_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Response_Timestamp__c</fullName>
    <label>Response Timestamp</label>
    <type>DateTime</type>
</CustomField>